<resources>
    <!--Login-->
    <string name="app_name">MiMedico</string>
    <string name="login_app">&#160;&#160;MiMedico</string>
    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Login</string>
    <string name="login_signup">I do not have an Account</string>
    <string-array name="roles">
        <item>1° User</item>
        <item>2° Medic</item>
        <item>3° Admin</item>
    </string-array>

    <!--Sign Up-->
    <string name="signup_title">Sign up</string>
    <string name="siguup_firstname">Firstname</string>
    <string name="signup_lastname">Lastname</string>
    <string name="signup_username">Username</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_birthdate">Birth Date</string>
    <string name="signup_account_type">Account Type</string>
    <string name="singup_title">Title Photo</string>
    <string name="signup_submit">Sign Up</string>
    <string name="signup_login">I already have an account</string>

    <!--Menu-->
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>

    <!--Languages-->
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>

    <!--Main-->
    <string name="main">My Profile</string>
    <string name="main_name">Name:</string>
    <string name="main_user">Username: </string>
    <string name="main_email">Email: </string>
    <string name="main_birthdate">BirthDate: </string>
    <string name="main_medics">My Medics</string>
    <string name="main_symptoms">My Symptoms</string>
    <string name="main_notifications">Notifications</string>
    <string name="main_medic">Signup as Medic</string>

    <!--MedicMain-->
    <string name="main_medic_medic">Medic: </string>
    <string name="main_medic_email">Email: </string>
    <string name="main_medic_check">Check Petitions</string>
    <string name="main_medic_patients">My Patients</string>
    <string name="main_medic_notifications">Notifications</string>

    <!--Signup-->
    <string name="signup_medic">Signup As a medic</string>
    <string name="signup_medic_school">Name of the institution</string>
    <string name="signup_medic_years">Years Of Experience</string>
    <string name="signup_medic_image">Select image of medical certificate</string>
    <string name="signup_medic_photo">Select photo of your face</string>
    <string name="signup_medic_select">Select</string>
    <string name="signup_medic_send">Send</string>

    <!--Email-->
    <string name="email_no_validate">Email not validate, Check Your email to validate</string>
    <string name="resend">Resend Validation Email</string>
    <string name="reload">Reload Session</string>

    <!--My Symptoms-->
    <string name="my_symptoms_title">My Symptoms</string>
    <string name="my_symptoms_placeholder">Key Words</string>
    <string name="my_symptoms_search">Search</string>
    <string name="my_symptoms_messages">Messages</string>
    <string name="my_symptoms_delete">Delete</string>

    <!--Send Symptoms-->
    <string name="send_symptoms_title">Send Symptoms</string>
    <string name="send_symptoms_title_placeholder">Title of petition</string>
    <string name="send_symptoms_placeholder">Write over here the symptoms</string>
    <string name="send_symptoms_append_image">Append Image(Optional)</string>
    <string name="send_symptoms_send">Send</string>

    <!--Check Petitions-->
    <string name="check_petitions_text">Check Petitions</string>
    <string name="check_petitions_send">Send Message</string>

    <!--Check One Petition-->
    <string name="check_one_petition_title">Check Petition</string>
    <string name="check_one_petition_placeholder">Message</string>
    <string name="check_one_petition_send">Send</string>

    <!--Petitions Messages-->
    <string name="petitions_messages_text">Messages</string>
    <string name="petitions_messages_button">View Details</string>

    <!--Admin Main-->
    <string name="admin_user">Admin: </string>
    <string name="admin_email">Email: </string>
    <string name="admin_check_medic_proofs">Check Medic Proofs</string>

    <!--Medic Petitions List -->
    <string name="medic_petition_list_view">View</string>

    <!--Medic Petition-->
    <string name="medic_petition_photos">Photos</string>
    <string name="medic_petition_accept">Accept</string>
    <string name="medic_petition_reject">Reject</string>

    <!--Medic Message-->
    <string name="medic_message_name">Name: </string>
    <string name="medic_message_institution">Institution: </string>
    <string name="medic_message_years">Years Of Experience: </string>
    <string name="medic_message_email">Email: </string>
    <string name="medic_message_message">Message: </string>
    <string name="medic_message_accept">Accept this medic</string>
    <string name="medic_message_reject">Reject this medic</string>

    <!--My Medics-->
    <string name="my_medic_title"> My Medical Consults</string>
    <string name="my_medic_id">Consult Id: </string>
    <string name="my_medic_medic">Medic: </string>
    <string name="my_medic_description">Description: </string>
    <string name="my_medic_date">Date: </string>
    <string name="my_medic_chat">Chat</string>
    <string name="my_medic_videochat">Videochat</string>

    <!--User Chat-->
    <string name="user_chat_id">Consult Id: </string>
    <string name="user_chat_title">Title: </string>
    <string name="user_chat_medic">Medic: </string>
    <string name="user_chat_placeholder">Message</string>
    <string name="user_chat_send">Send</string>

    <!--My Patients-->
    <string name="my_patients_title"> My Patients</string>
    <string name="my_patients_id">Id: </string>
    <string name="my_patients_medic">Patient: </string>
    <string name="my_patients_description">Description: </string>
    <string name="my_patients_date">Date: </string>
    <string name="my_patients_chat">Chat</string>

    <!--Medic Chat-->
    <string name="medic_chat_user">Patient: </string>

    <!--Check One Petition-->
    <string name="check_one_title">Title: </string>
    <string name="check_one_name">Name: </string>
    <string name="check_one_username">Username: </string>
    <string name="check_one_date">Petition Date: </string>
    <string name="check_one_email">Email: </string>
    <string name="check_one_description">Description: </string>

    <!--Videochat-->
    <string name="videochat">Videochat</string>
    <string name="call">Call</string>
</resources>