<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6C9F5"
    tools:context=".MainAdmin">

    <TextView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/main"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adminName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/main_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin" />

    <TextView
        android:id="@+id/adminUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/main_user"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminName" />

    <TextView
        android:id="@+id/adminEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/admin_email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminUsername" />

    <Button
        android:id="@+id/adminCheckMedicProofButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/cross50px"
        android:text="@string/admin_check_medic_proofs"
        android:background="@drawable/round_bg"
        android:fontFamily="@font/baloo"
        android:textSize="20dp"
        app:backgroundTint="#3F60F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminEmail" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:scaleType="centerCrop"
        android:translationZ="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back3" />

</androidx.constraintlayout.widget.ConstraintLayout>