<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6C9F5"
    tools:context=".Language">

    <TextView
        android:id="@+id/languagesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/languages"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/spanishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spanish"
        android:onClick="setSpanishAsLanguage"
        android:background="@drawable/round_bg"
        app:backgroundTint="#3F60F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languagesText"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/englishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:onClick="setEnglishAsLanguage"
        android:background="@drawable/round_bg"
        app:backgroundTint="#3F60F1"
        app:layout_constraintBaseline_toBaselineOf="@+id/spanishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spanishButton" />
</androidx.constraintlayout.widget.ConstraintLayout>